frueher war mehr lametta

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <link href="{{site.base_url}}assets/style/style.css" rel='stylesheet' type='text/css'>
 
     <link rel="alternate" type="application/atom+xml" title="Das Blog der Open Knowledge Foundation Deutschland." href="{{site.base_url}}atom.xml" />
-    <link rel="shortcut icon" href="{{site.base_url}}images/favicon.ico">
+    <link rel="shortcut icon" href="{{site.base_url}}static/images/favicon.ico">
   </head>
   <body>
     <div id="page">
