remove ref to logo

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,8 +9,8 @@
         <span class="icon-bar"></span>
       </button>
       {% if page.home != true %}
-      <a class="navbar-brand" href="/">
-        {% include logo.html %}
+      <a class="navbar-brand" href="{{site.base_url}}">
+        Open Knowledge Foundation Deutschland
       </a>
       {% endif %}
     </div>
