--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
       </button>
       {% if page.home != true %}
-      <a class="navbar-brand" href="{{site.base_url}}">
+      <a class="navbar-brand" href="{{site.baseurl}}">
         Open Knowledge Foundation Deutschland
       </a>
       {% endif %}
@@ -17,9 +17,11 @@
 
     <div class="collapse navbar-collapse" id="mainmenu">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/blog">Blog</a></li>
-        <li><a href="/projects">Projects</a></li>
-        <li><a href="/about">About</a></li>
+        <li><a href="{{ site.baseurl }}themen/">Themen</a></li>
+        <li><a href="{{ site.baseurl }}projekte/">Projekte</a></li>
+        <li><a href="{{ site.baseurl }}community/">Community</a></li>
+        <li><a href="{{ site.baseurl }}blog/">Blog</a></li>
+        <li><a href="{{ site.baseurl }}services/">Services</a></li>
       </ul>
     </div>
   </div>
