--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -1,10 +1,19 @@
 ---
 ---
 
-$primary-color: #BA4B37;
-$primary-color: #4489ca;
-$font-color: #333;
-$light-font-color: #999;
+$okf-primary: rgb(122, 184, 0);
+$okf-secondary: rgb(255, 0, 0);
+$okf-secondary-alt: rgb(0, 165, 224);
+$okf-darkgrey: rgb(45, 45, 45);
+$okf-midgrey: rgb(142, 142, 142);
+$okf-lightgrey: rgb(240, 240, 240);
+$okf-working-group-bg: rgb(29, 29, 27);
+
+$okf-link: $okf-primary;
+
+$primary-color: $okf-primary;
+$font-color: $okf-darkgrey;
+$light-font-color: $okf-midgrey;
 
 body {
   color: $font-color;
@@ -16,238 +25,4 @@ body {
 .container-fluid {
   padding-right: 5%;
   padding-left: 5%;
-}
-
-body, h1, h2, h3, h4, h5, h6 {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 400;
-}
-
-a {
-  color: $primary-color;
-  text-decoration: underline;
-}
-
-a:hover {
-  color: lighten($primary-color, 10%);
-}
-
-code {
-  background-color: lighten($primary-color, 45%);
-  color: $primary-color;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-weight: normal;
-  line-height: 1.8em;
-  margin-bottom: 0.6em;
-}
-
-// Logo
-.logo {
-  font-family: Verdana, sans-serif;
-  font-size: 1.2em;
-  font-weight: 900;
-  height: 1em;
-  width: 1.6em;
-  position: relative;
-  display: inline-block;
-
-  $angle: 350deg;
-  div {
-    margin-top: -0.1em;
-    position: absolute;
-    transform: rotate($angle);
-    -webkit-transform: rotate($angle);
-    -moz-transform: rotate($angle);
-    -o-transform: rotate($angle);
-    -ms-transform: rotate($angle);
-  }
-}
-
-#page {
-  background-color: white;
-  padding: 0 0 2em 0;
-}
-
-
-/* Navbar area */
-
-.navbar.navbar-default {
-  background-color: $primary-color;
-  border-bottom: 0px solid #ddd;
-  color: white;
-  margin-bottom: 0;
-
-  .navbar-brand {
-    a {
-      color: white;
-      text-decoration: none;
-
-    }
-  }
-
-  a, li a { 
-    color: $font-color;
-    color: lighten($primary-color, 40%);
-  }
-
-  button.navbar-toggle {
-    border: 0;
-    .icon-bar {
-      background-color: white;
-    }
-
-    &:hover {
-      background-color: darken($primary-color, 10%);
-    }
-  }
-
-  .navbar-collapse {
-    border-top: 0;
-  }
-
-}
-
-/* Home page intro */
-
-.intro {
-  background-color: $primary-color;
-  color: white;
-  padding-top: 3em;
-  padding-bottom: 0em;
-
-  .logo-section {
-    font-size: 10em;
-    text-align: right;
-    padding-top: 0.5em;
-    padding-right: 0.2em;
-    color: lighten($primary-color, 40%);
-  }
-
-  .text-section {
-    line-height: 2em;
-    font-size: 1.6em;
-  }
-}
-
-/* Footer area */
-
-footer {
-  padding: 1em 0 1em 0;
-  color: $light-font-color;
-  color: white;
-
-  a {
-    text-decoration: none;
-    color: white;
-  }
-
-  a:hover {
-    text-decoration: underline;
-    color: white;
-  }
-
-  ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-
-    li {
-      margin-bottom: 0.5em;
-    }
-  }
-}
-
-
-/* Front page listings */
-
-#airlock {
-  margin-top: 1em;
-
-  .section {
-    margin: -0.4em 0 2em 0;
-  }
-
-  h2 {
-    margin: 0 0 0.5em 0;
-    text-transform: uppercase;
-    font-size: 1.4em;
-  }
-
-  h3 {
-    margin: 0 0 0.5em 0;
-    text-transform: uppercase;
-    font-size: 1.2em;
-  }
-
-  ul {
-    list-style-type: square;
-    /* padding: 0; */
-
-    li {
-      /* margin: 0 0 10px; */
-    }
-  }
-
-  ul.menu {
-    list-style-type: none;
-  }
-
-  .entries {
-    list-style-type: none;
-    padding: 0;
-
-    li {
-      text-indent: -3em;
-      padding-left: 3em;
-      padding-bottom: 0.5em;
-    }
-
-    .date {
-      color: $light-font-color;
-    }
-
-    .title {
-      font-weight: 600;
-    }
-
-    .description {
-      color: $light-font-color;
-      text-indent: 0em;
-      display: block;
-    }
-  }
-}
-
-/* Post page */
-
-.post-date {
-  color: $light-font-color;
-}
-
-.related-posts {
-  
-}
-
-#post ul {
-  padding: 0 0 0 2em;
-}
-
-.captioned {
-  margin: 1em 0 1em 0;
-
-  .caption {
-    font-size: 0.9em;
-    margin: 0.5em 0 0 0;
-    color: $light-font-color;
-  }
-}
-
-.captioned.pull-right {
-  margin: 0em 0em 1em 1em;
-}
-
-.standalone {
-  margin-bottom: 1em;
 }
