Use container, not container-fluid.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,9 @@
   <body>
     <div id="page">
       {% include nav.html %}
-      {{ content }}
+      <div class="container">
+        {{ content }}
+      </div>
     </div>
     {% include footer.html %}
 
