--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="hidden-print">
-  <div class="container-fluid">
+  <div class="container">
     <div class="row">
       <div class="col-md-6">
         banana!
