--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
-    <link href="{{site.baseurl}}static/style/style.css" rel='stylesheet' type='text/css'>
+    <link href="{{ site.staticurl }}style/style.css" rel='stylesheet' type='text/css'>
     <link rel="alternate" type="application/atom+xml" title="Blog der Open Knowledge Foundation Deutschland." href="{{site.baseurl}}atom.xml" />
     <link rel="shortcut icon" href="{{site.baseurl}}static/images/favicon.ico">
   </head>
