really living out my footer fetish here.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,25 @@
 <footer class="hidden-print">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        banana!
+  <div class="mezzanine">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          banana!
+        </div>
+        <div class="col-md-6">
+          <div class="pull-right">
+            apple!
+          </div>
+        </div>
       </div>
-      <div class="col-md-6">
-        <div class="pull-right">
-          apple!
+    </div>
+  </div>
+  <div class="cellar">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          Open Knowledge Foundation Deutschland e.V. ist ein eingetragener 
+          Verein, Vereinsregister-Nr. VR 30468 B. Die Inhalte dieser Webseite
+          sind nach <a href="https://creativecommons.org/licenses/by/3.0/de/">Creative Commons 3.0 Attribution</a> freigegeben.
         </div>
       </div>
     </div>
