Logo in footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,9 +17,14 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          Open Knowledge Foundation Deutschland e.V. ist ein eingetragener 
-          Verein, Vereinsregister-Nr. VR 30468 B. Die Inhalte dieser Webseite
-          sind nach <a href="https://creativecommons.org/licenses/by/3.0/de/">Creative Commons 3.0 Attribution</a> freigegeben.
+          <div class="pull-left">
+            <a href="{{site.baseurl}}"><img src="{{site.staticurl}}images/logo_footer.png" alt="Open Knowldege Foundation Deutschland e.V."></a>
+          </div>
+          <p>
+            Open Knowledge Foundation Deutschland e.V. ist ein eingetragener 
+            Verein, Vereinsregister-Nr. VR 30468 B. Die Inhalte dieser Webseite
+            sind nach <a href="https://creativecommons.org/licenses/by/3.0/de/">Creative Commons 3.0 Attribution</a> freigegeben.
+          </p>
         </div>
       </div>
     </div>
