Footer very style, much beauty

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <div class="pull-left">
+          <div class="pull-left logo">
             <a href="{{site.baseurl}}"><img src="{{site.staticurl}}images/logo_footer.png" alt="Open Knowldege Foundation Deutschland e.V."></a>
           </div>
           <p>
