--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,8 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="{{site.baseurl}}">
-        Open Knowledge Foundation Deutschland
+        <img src="{{ site.staticurl }}images/logo_text.png" 
+          alt="Open Knowledge Foundation Deutschland">
       </a>
     </div>
 
