Some more styling

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,13 +2,39 @@
   <div class="mezzanine">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
-          banana!
+        <div class="col-md-3">
+          <h3>Themen</h3>
+          <ul>
+            <li><a href="#">Offene Daten</a></li>
+            <li><a href="#">Offene Wissenschaft</a></li>
+            <li><a href="#">Offene Kulturgüter</a></li>
+            <li><a href="#">Informationsfreiheit</a></li>
+            <li><a href="#">Civic Technology</a></li>
+          </ul>
         </div>
-        <div class="col-md-6">
-          <div class="pull-right">
-            apple!
-          </div>
+        <div class="col-md-3">
+          <h3>Projekte</h3>
+          <ul>
+            <li><a href="#">Frag den Staat</a></li>
+            <li><a href="#">Offener Haushalt</a></li>
+            <li><a href="#">Entwicklungsbarometer</a></li>
+            <li><a href="#">Offene Ratsinformation</a></li>
+            <li><a href="#">Offenes Parlament</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3">
+          <h3>Community</h3>
+          <ul>
+            <li><a href="#">Code for Germany</a></li>
+            <li><a href="#">Jugend Hackt</a></li>
+            <li><a href="#">Coding da Vinci</a></li>
+            <li><a href="#">Hacks and the City</a></li>
+            <li><a href="#">Mailinglisten</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3">
+          <h3>Kontakt</h3>
+          
         </div>
       </div>
     </div>
@@ -18,7 +44,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="pull-right logo">
-            <a href="{{site.baseurl}}"><img src="{{site.staticurl}}images/logo_footer.png" alt="Open Knowldege Foundation Deutschland e.V."></a>
+            <a href="{{site.baseurl}}"><img src="{{site.staticurl}}images/logo_footer_b.png" alt="Open Knowldege Foundation Deutschland e.V."></a>
           </div>
           <p>
             Open Knowledge Foundation Deutschland e.V. ist ein eingetragener 
