--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,18 +9,18 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="{{site.baseurl}}">
-        <img src="{{ site.staticurl }}images/logo_text.png" 
+        <img src="{{ site.staticurl }}images/logo_text_w.png" 
           alt="Open Knowledge Foundation Deutschland">
       </a>
     </div>
 
     <div class="collapse navbar-collapse" id="mainmenu">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="{{ site.baseurl }}themen/">Themen</a></li>
-        <li><a href="{{ site.baseurl }}projekte/">Projekte</a></li>
-        <li><a href="{{ site.baseurl }}community/">Community</a></li>
-        <li><a href="{{ site.baseurl }}blog/">Blog</a></li>
-        <li><a href="{{ site.baseurl }}services/">Services</a></li>
+        <li><a class="nav-link" href="{{ site.baseurl }}themen/">Themen</a></li>
+        <li><a class="nav-link" href="{{ site.baseurl }}projekte/">Projekte</a></li>
+        <li><a class="nav-link" href="{{ site.baseurl }}community/">Community</a></li>
+        <li><a class="nav-link" href="{{ site.baseurl }}blog/">Blog</a></li>
+        <li><a class="nav-link" href="{{ site.baseurl }}services/">Services</a></li>
       </ul>
     </div>
   </div>
