--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
 
     <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="{{ site.staticurl }}js/logo.js"></script>
     {% include ga.html %}
   </body>
 </html>
