Update some pages roughly to new design

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="hidden-print">
-  <div class="mezzanine">
+  <div class="footer">
     <div class="container">
       <div class="row">
         <div class="col-md-3">
@@ -34,7 +34,7 @@
         </div>
         <div class="col-md-3">
           <h3>Kontakt</h3>
-          
+
         </div>
       </div>
     </div>
@@ -42,15 +42,17 @@
   <div class="cellar">
     <div class="container">
       <div class="row">
-        <div class="col-md-12">
-          <div class="pull-right logo">
-            <a href="{{site.baseurl}}"><img src="{{site.staticurl}}images/logo_footer_b.png" alt="Open Knowldege Foundation Deutschland e.V."></a>
-          </div>
+        <div class="col-md-8">
           <p>
-            Open Knowledge Foundation Deutschland e.V. ist ein eingetragener 
+            Open Knowledge Foundation Deutschland e.V. ist ein eingetragener
             Verein, Vereinsregister-Nr. VR 30468 B. Die Inhalte dieser Webseite
             sind nach <a href="https://creativecommons.org/licenses/by/3.0/de/">Creative Commons 3.0 Attribution</a> freigegeben.
           </p>
+        </div>
+        <div class="col-md-2 col-md-push-2">
+            <a href="{{ site.baseurl }}">
+              <img src="{{site.staticurl}}images/logo_footer.png" alt="Open Knowldege Foundation Deutschland e.V.">
+            </a>
         </div>
       </div>
     </div>
