--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,6 +1,9 @@
 ---
-layout: default
+layout: page
+menu_projekte: yes
 
 ---
-
-{{ content }}
+<div class="box page-highlight col-md-8 col-center">
+  <h1>{{ page.title }}</h1>
+  {{ content }}
+</div>
