Restructure layouts a bit

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,27 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+---
+layout: base
 
-    <title>{{ page.title }} &gt; Open Knowledge Foundation Deutschland</title>
-    <meta name="description" content="{{page.description}}" />
-    <meta name="keywords" content="" />
+---
 
-    <link href="{{ site.staticurl }}style/bootstrap.min.css" rel="stylesheet">
-    <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
-    <link href="{{ site.staticurl }}style/style.css" rel='stylesheet' type='text/css'>
-    <link rel="alternate" type="application/atom+xml" title="Blog der Open Knowledge Foundation Deutschland." href="{{site.baseurl}}atom.xml" />
-    <link rel="shortcut icon" href="{{site.baseurl}}static/images/favicon.ico">
-  </head>
-  <body>
-    {% include nav.html %}
-    {{ content }}
-    {% include footer.html %}
-
-    <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="{{ site.staticurl }}js/logo.js"></script>
-    {% include ga.html %}
-  </body>
-</html>
+<div class="container">
+  {{ content }}
+</div>
