--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,9 +1,25 @@
 ---
-layout: page
+layout: default
 menu_projekte: yes
 
 ---
-<div class="box page-highlight col-md-8 col-center">
+<div class="top-box col-md-8 col-center">
   <h1>{{ page.title }}</h1>
   {{ content }}
+
+  <div class="row">
+    <div class="col-md-6">
+      {% if page.people.size > 0 %}
+        <ol>
+        {% for person in page.people %}
+          <li>
+            {{ person.name }}
+          </li>
+        {% endfor %}
+        </ol>
+      {% endif %}
+    </div>
+    <div class="col-md-6">
+    </div>
+  </div>
 </div>
