--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,8 +21,8 @@
         <li{% if page.menu_blog %} class="active"{% endif %}>
           <a class="nav-link" href="{{ site.baseurl }}blog/">Blog</a>
         </li>
-        <li{% if page.menu_services %} class="active"{% endif %}>
-          <a class="nav-link" href="{{ site.baseurl }}services/">Services</a>
+        <li{% if page.menu_beratung %} class="active"{% endif %}>
+          <a class="nav-link" href="{{ site.baseurl }}beratung/">Beratung</a>
         </li>
       </ul>
     </div>
